adding support for the test environment, adding support to make MMS easier, upgrading the version.